--- a/pom.xml
+++ b/pom.xml
@@ -21,6 +21,12 @@
             <version>1.1.8</version>
             <type>pom</type>
         </dependency>
+        <dependency>
+            <groupId>info.cukes</groupId>
+            <artifactId>cucumber-testng</artifactId>
+            <version>1.1.8</version>
+            <scope>test</scope>
+        </dependency>
     </dependencies>
 
 </project>
